[package]
name = "rustmiko"
description = "A Netmiko rewrite for Rust"
authors = ["Kek5chen"]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kek5chen/rustmiko"

[dependencies]
ssh2 = "0.9.4"
telnet = "0.2.1"
anyhow = "1.0.86"
log = "0.4.22"
regex = "1.10.6"

[dev-dependencies]
env_logger = "0.11.5"

[features]
default = ["cisco", "juniper"]
cisco = []
juniper = []